--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,50 +1,55 @@
 {
-    "name": "<%= npmName %>",
-    "version": "0.0.0-semantic-release",
-    "description": "<%= projectDescription %>",
-    "main": "dist/index.js",
-    "types": "types/index.d.ts",
-    "files": [
-        "dist/**/*",
-        "types/**/*"
-    ],
-    "scripts": {
-        "test": "npm run build && npm run lint && npm run test:unittest",
-        "precommit:test": "npm run build && lint-staged && npm run precommit:unittest",
-        "build": "tsc",
-        "clean": "rm -rf dist types coverage",
-        "test:unittest": "tsc -p test && nyc mocha 'test/**/*.@(ts|js)'",
-        "precommit:unittest": "tsc -p test && mocha --reporter progress 'test/**/*.@(ts|js)'",
-        "lint": "npm run lint:source && npm run lint:markdown && npm run lint:tests",
-        "lint:source": "tslint -c tslint.json -t stylish 'src/**/*.ts'",
-        "lint:tests": "tslint -c test/tslint.json -t stylish 'test/**/*.ts'",
-        "lint:markdown": "markdownlint **/*.md *.md",
-        "prepare": "npm run build",
-        "prepublishOnly": "npm run build && npm test",
-        "semantic-release": "semantic-release",
-        "commitmsg": "validate-commit-msg",
-        "precommit": "npm run precommit:test"
-    },
-    "lint-staged": {
-        "src/**/*.ts": ["tslint -c tslint.json -t stylish"],
-        "test/**/*.ts": ["tslint -c test/tslint.json -t stylish"]
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/<%= githubProject %>.git"
-    },
-    "keywords": <%- keywords %>,
-    "author": {
-        "name": "<%= authorName %>",
-        "email": "<%= authorEmail %>",
-        "url" : "<%= authorUrl %>"
-    },
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/exegesis-js/<%= githubProject %>/issues"
-    },
-    "homepage": "https://github.com/<%= githubProject %>#readme",
-    "devDependencies": {
-        "@types/node": "^<%= minNodeVersion %>.0.0"
+  "name": "<%= npmName %>",
+  "version": "0.0.0-semantic-release",
+  "description": "<%= projectDescription %>",
+  "main": "dist/index.js",
+  "types": "types/index.d.ts",
+  "files": [
+    "dist/**/*",
+    "types/**/*"
+  ],
+  "scripts": {
+    "test": "npm run build && npm run lint && npm run test:unittest",
+    "precommit:test": "npm run build && lint-staged && npm run precommit:unittest",
+    "build": "tsc",
+    "clean": "rm -rf dist types coverage",
+    "test:unittest": "tsc -p test && nyc mocha 'test/**/*.@(ts|js)'",
+    "precommit:unittest": "tsc -p test && mocha --reporter progress 'test/**/*.@(ts|js)'",
+    "lint": "npm run lint:source && npm run lint:markdown && npm run lint:tests",
+    "lint:source": "tslint -c tslint.json -t stylish 'src/**/*.ts'",
+    "lint:tests": "tslint -c test/tslint.json -t stylish 'test/**/*.ts'",
+    "lint:markdown": "markdownlint **/*.md *.md",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run build && npm test",
+    "semantic-release": "semantic-release"
+  },
+  "lint-staged": {
+    "src/**/*.ts": ["tslint -c tslint.json -t stylish"],
+    "test/**/*.ts": ["tslint -c test/tslint.json -t stylish"]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/<%= githubProject %>.git"
+  },
+  "keywords": <%- keywords %>,
+  "author": {
+    "name": "<%= authorName %>",
+    "email": "<%= authorEmail %>",
+    "url" : "<%= authorUrl %>"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/exegesis-js/<%= githubProject %>/issues"
+  },
+  "homepage": "https://github.com/<%= githubProject %>#readme",
+  "devDependencies": {
+    "@types/node": "^<%= minNodeVersion %>.0.0",
+    "husky": "^1.0.0-rc.2"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "validate-commit-msg",
+      "pre-commit": "npm run test:pre-commit"
     }
   }
+}
