By default, don't expect lockfile.

--- a/generators/app/templates/.travis.yml
+++ b/generators/app/templates/.travis.yml
@@ -1,31 +1,36 @@
 language: node_js
+node_js:
+  - 'node'
+  - '10'
+  - '8'
+  - '6'
 cache:
     directories:
         - ~/.npm
 jobs:
   include:
     - stage: test
-      node_js:
-        - 'node'
-        - '10'
-        - '8'
-        - '6'
       before_install:
         - npm install -g npm
-        - npm install -g nsp greenkeeper-lockfile@1
+        - npm install -g nsp
+        # - npm install -g greenkeeper-lockfile@1
       install:
         - travis_retry npm install
       before_script:
         - nsp check
-        - greenkeeper-lockfile-update
+        # - greenkeeper-lockfile-update
       after_script:
         # Only the first job will upload the lockfile
-        - greenkeeper-lockfile-upload
+        # - greenkeeper-lockfile-upload
       after_success:
         - 'cat ./coverage/lcov.info | ./node_modules/.bin/coveralls'
 
     # Uncomment this block to enable semantic-release.
     # - stage: release
     #   node_js: lts/*
+    #   before_install:
+    #     - npm install -g npm
+    #   install:
+    #     - travis_retry npm install
     #   script:
     #     - npm run semantic-release
