--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -13,11 +13,11 @@
     "precommit:test": "npm run build && lint-staged && npm run precommit:unittest",
     "build": "tsc",
     "clean": "rm -rf dist types coverage",
-    "test:unittest": "tsc -p test && nyc mocha 'test/**/*.@(ts|js)'",
-    "precommit:unittest": "tsc -p test && mocha --reporter progress 'test/**/*.@(ts|js)'",
+    "test:unittest": "tsc -p test && nyc mocha 'test/**/*.@(ts|tsx|js|jsx)'",
+    "precommit:unittest": "tsc -p test && mocha --reporter progress 'test/**/*.@(ts|tsx|js|jsx)'",
     "lint": "npm run lint:source && npm run lint:markdown && npm run lint:tests",
-    "lint:source": "tslint -c tslint.json -t stylish 'src/**/*.ts'",
-    "lint:tests": "tslint -c test/tslint.json -t stylish 'test/**/*.ts'",
+    "lint:source": "tslint -c tslint.json -t stylish 'src/**/*.@(ts|tsx)'",
+    "lint:tests": "tslint -c test/tslint.json -t stylish 'test/**/*.@(ts|tsx)'",
     "lint:markdown": "markdownlint **/*.md *.md",
     "prepare": "npm run build",
     "prepublishOnly": "npm run build && npm test",
