--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -48,7 +48,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "validate-commit-msg",
-      "pre-commit": "npm run test:pre-commit"
+      "pre-commit": "pretty-quick --staged && npm run test:pre-commit"
     }
   }
 }
