--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -9,10 +9,10 @@
   ],
   "scripts": {
     "test": "npm run build && npm run lint && npm run test:unittest",
-    "precommit:test": "npm run build && lint-staged && npm run precommit:unittest",
     "build": "tsc",
     "clean": "rm -rf dist types coverage",
     "test:unittest": "tsc -p test && nyc mocha 'test/**/*.@(ts|tsx|js|jsx)'",
+    "precommit:test": "lint-staged && npm run precommit:unittest",
     "precommit:unittest": "tsc -p test && mocha --reporter progress 'test/**/*.@(ts|tsx|js|jsx)'",
     "lint": "npm run lint:source && npm run lint:tests",
     "lint:source": "eslint --ext .ts --ext .tsx src",
@@ -45,7 +45,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && npm run test:pre-commit"
+      "pre-commit": "pretty-quick --staged && npm run precommit:test"
     }
   }
 }
