--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -2,22 +2,29 @@
   "name": "<%= npmName %>",
   "version": "0.0.0-semantic-release",
   "description": "<%= projectDescription %>",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "sideEffects": false,
+  "module": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/esm/index.d.ts",
+  "exports": {
+      ".": {
+          "import": "./dist/esm/index.js",
+          "require": "./dist/cjs/index.js",
+          "default": "./dist/cjs/index.js"
+      }
+  },
   "files": [
-    "dist/**/*"
+      "dist/**/*"
   ],
   "scripts": {
     "test": "npm run build && npm run lint && npm run test:unittest",
-    "build": "tsc",
+    "build": "tsc && tsc -p tsconfig.cjs.json && ./bin/build-types.sh",
     "clean": "rm -rf dist types coverage",
     "test:unittest": "tsc -p test && nyc mocha 'test/**/*.@(ts|tsx|js|jsx)'",
-    "precommit:test": "lint-staged && npm run precommit:unittest",
-    "precommit:unittest": "tsc -p test && mocha --reporter progress 'test/**/*.@(ts|tsx|js|jsx)'",
     "lint": "npm run lint:source && npm run lint:tests",
     "lint:source": "eslint --ext .ts --ext .tsx src",
     "lint:tests": "eslint --ext .ts --ext .tsx test",
-    "prepare": "npm run build",
+    "prepare": "husky install && npm run build",
     "prepublishOnly": "npm run build && npm test",
     "semantic-release": "semantic-release"
   },
@@ -41,10 +48,5 @@
   "homepage": "https://github.com/<%= githubProject %>#readme",
   "devDependencies": {
     "@types/node": "^<%= minNodeVersion %>.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && npm run precommit:test"
-    }
   }
 }
