--- a/package.json
+++ b/package.json
@@ -1,38 +1,48 @@
 {
-  "name": "@jwalton/generator-typescript",
-  "version": "1.2.0",
-  "description": "Generates a typescript project",
-  "homepage": "https://github.com/jwalton/node-jwalton-generator-typescript",
-  "author": {
-    "name": "Jason Walton",
-    "email": "dev@lucid.thedreaming.org",
-    "url": "https://www.thedreaming.org/"
-  },
-  "files": [
-    "generators"
-  ],
-  "main": "generators/index.js",
-  "keywords": [],
-  "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-benbria": "^3.0.2",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-promise": "^5.1.0"
-  },
-  "engines": {
-    "npm": ">= 4.0.0"
-  },
-  "dependencies": {
-    "chalk": "^2.1.0",
-    "inquirer-npm-name": "^3.0.0",
-    "lodash": "^4.17.10",
-    "mkdirp": "^0.5.1",
-    "yeoman-generator": "^3.1.1",
-    "yosay": "^2.0.1"
-  },
-  "scripts": {
-    "test": "eslint ."
-  },
-  "repository": "jwalton/node-jwalton-generator-typescript",
-  "license": "MIT"
+    "name": "@jwalton/generator-typescript",
+    "version": "1.2.0",
+    "description": "Generates a typescript project",
+    "homepage": "https://github.com/jwalton/node-jwalton-generator-typescript",
+    "author": {
+        "name": "Jason Walton",
+        "email": "dev@lucid.thedreaming.org",
+        "url": "https://www.thedreaming.org/"
+    },
+    "files": [
+        "generators"
+    ],
+    "main": "generators/index.js",
+    "keywords": [],
+    "devDependencies": {
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.11.0",
+        "eslint-plugin-promise": "^5.1.0",
+        "husky": "^7.0.1",
+        "lint-staged": "^11.1.2",
+        "prettier": "^2.3.2",
+        "pretty-quick": "^3.1.1"
+    },
+    "engines": {
+        "npm": ">= 4.0.0"
+    },
+    "dependencies": {
+        "chalk": "^2.1.0",
+        "inquirer-npm-name": "^3.0.0",
+        "lodash": "^4.17.10",
+        "mkdirp": "^0.5.1",
+        "yeoman-generator": "^3.1.1",
+        "yosay": "^2.0.1"
+    },
+    "scripts": {
+        "prepare": "husky install",
+        "test": "eslint ."
+    },
+    "lint-staged": {
+        "*.(js|jsx|ts|tsx)": [
+            "eslint"
+        ]
+    },
+    "repository": "jwalton/node-jwalton-generator-typescript",
+    "license": "MIT"
 }
