--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "main": "generators/index.js",
     "keywords": [],
     "devDependencies": {
+        "@types/yeoman-generator": "^5.2.2",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.11.0",
@@ -29,9 +30,9 @@
     "dependencies": {
         "chalk": "^4.1.2",
         "inquirer-npm-name": "^4.0.0",
-        "lodash": "^4.17.10",
+        "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
-        "yeoman-generator": "^3.1.1",
+        "yeoman-generator": "^5.4.0",
         "yosay": "^2.0.1"
     },
     "scripts": {
